Bump to JDK 21 FFM API